@@ -144,3 +144,6 @@
 * 20090723: Add encryption tests.
 
 * 20090723: Add "shm_key" tests.
+
+* 20090723: Add "cachesize" tests.
+
